--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>here am creating first project with github</h1>
+    <h2>here am M A Goud</h2>
   </body>
 </html>
